--- a/luli.css
+++ b/luli.css
@@ -46,7 +46,7 @@ body {
 .carousel img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     flex: 0 0 100%; /* Cada imagem ocupará 100% do container */
     border-radius: 10px;
 }
