--- a/luli.css
+++ b/luli.css
@@ -48,6 +48,9 @@ body {
     width: 100%;
     height: auto;
     object-fit: contain;
+    max-height: 80vh;
+    display: block;
+    margin: 0 auto;
     flex: 0 0 100%; /* Cada imagem ocupará 100% do container */
     border-radius: 10px;
 }
