--- a/luli.css
+++ b/luli.css
@@ -47,7 +47,7 @@ body {
 .carousel img {
     width: 100%;
     height: auto;
-    object-fit: contain;
+    object-fit: cover;
     max-height: 80vh;
     display: block;
     margin: 0 auto;
