--- a/luli.css
+++ b/luli.css
@@ -46,12 +46,9 @@ body {
 
 .carousel img {
     width: 100%;
-    height: auto;
-    object-fit: cover;
-    max-height: 80vh;
-    display: block;
-    margin: 0 auto;
-    flex: 0 0 100%; /* Cada imagem ocupará 100% do container */
+    height: 100%;
+    object-fit: cover; /* Garante que a imagem ocupe o espaço sem deformar */
+    flex: 0 0 100%;
     border-radius: 10px;
 }
 
