--- a/luli.css
+++ b/luli.css
@@ -47,7 +47,7 @@ body {
 .carousel img {
     width: 100%;
     height: 100%;
-    object-fit: contain; /* Garante que a imagem inteira apareça sem cortes */
+    object-fit: cover; /* Garante que a imagem inteira apareça sem cortes */
     flex: 0 0 100%;
     border-radius: 10px;
     background-color: black; /* Evita espaços vazios */
