--- a/luli.css
+++ b/luli.css
@@ -28,7 +28,7 @@ body {
     aspect-ratio: 3 / 4;
     overflow: hidden;
     margin: 20px auto; 
-    background: black;
+    background: #1e1d1d;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
     display: flex;
     align-items: center;
